增加基准测试；修订布局中Boolean处理的BUG；